--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap or normal CSS sytlesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
-    <meta name="description" content="Bolt Protect - #SmarterSaferChoices" />
+    <meta name="description" content="Lyrics Around The Wurld - Wayo Challenge" />
 
     <meta name="theme-color" content="#5fd387" />
 
@@ -33,13 +33,13 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 
-    <meta property="og:title" content="Bolt Protect - #SmarterSaferChoices">
-    <meta property="og:description" content="Bolt Protect - #SmarterSaferChoices">
-    <meta name="description" content="Bolt Protect - #SmarterSaferChoices">
+    <meta property="og:title" content="Lyrics Around The Wurld - Wayo Challenge">
+    <meta property="og:description" content="Lyrics Around The Wurld - Wayo Challenge">
+    <meta name="description" content="Lyrics Around The Wurld - Wayo Challenge">
     <meta property="og:image" content="/thumbnail.png">
     <meta property="og:url" content="/">
-    <meta name="twitter:title" content="Bolt Protect - #SmarterSaferChoices">
-    <meta name="twitter:description" content="Bolt Protect - #SmarterSaferChoices">
+    <meta name="twitter:title" content="Lyrics Around The Wurld - Wayo Challenge">
+    <meta name="twitter:description" content="Lyrics Around The Wurld - Wayo Challenge">
     <meta name="twitter:image" content="/thumbnail.png">
     <meta name="twitter:card" content="summary_large_image">
     
@@ -58,7 +58,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bolt Protect - #SmarterSaferChoices</title>
+    <title>Lyrics Around The Wurld - Wayo Challenge</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146088699-4"></script>
     <script>
